@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.1.4"
 #define RUBY_RELEASE_DATE "2014-10-16"
-#define RUBY_PATCHLEVEL 254
+#define RUBY_PATCHLEVEL 255
 
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 10
